--- a/phoenixofresilience_website/contact.html
+++ b/phoenixofresilience_website/contact.html
@@ -198,65 +198,128 @@ nav .btn:hover {
     }
 
     /* CONTACT SECTION */
-    .contact-section {
-      max-width: 1100px;
-      margin: 80px auto;
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 40px;
-      padding: 0 20px;
-    }
+.contact-section {
+  background-color: #f8f1e9;
+  padding: 80px 20px;
+}
 
-    /* FORM */
-    .contact-form {
-      background: #fff;
-      padding: 30px;
-      border-radius: 18px;
-      border: 1px solid #f0e6d6;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.06);
-    }
+.contact-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 40px;
+  justify-content: space-between;
+  align-items: flex-start;
+}
 
-    .contact-form h2 {
-      color: var(--maroon);
-      font-family: 'Playfair Display', serif;
-      margin-bottom: 20px;
-    }
+.contact-form,
+.contact-info {
+  flex: 1 1 480px;
+  background: #fff;
+  padding: 40px 35px;
+  border-radius: 15px;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+  transition: all 0.3s ease;
+}
 
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-    }
+.contact-form:hover,
+.contact-info:hover {
+  transform: translateY(-5px);
+}
 
-    input, textarea, select {
-      width: 100%;
-      padding: 12px;
-      border-radius: 10px;
-      border: 1.5px solid #e9dfc1;
-      font-family: 'Lato', sans-serif;
-      font-size: 1rem;
-      background: #fdfbf7;
-    }
+.contact-form h2,
+.contact-info h2 {
+  font-family: 'Playfair Display', serif;
+  color: var(--maroon);
+  font-size: 1.8rem;
+  margin-bottom: 10px;
+  border-bottom: 3px solid var(--gold);
+  display: inline-block;
+  padding-bottom: 5px;
+}
 
-    input:focus, textarea:focus, select:focus {
-      border-color: var(--orange);
-      outline: none;
-    }
+.contact-form p {
+  color: #555;
+  font-size: 1rem;
+  margin-bottom: 25px;
+}
 
-    button {
-      background: var(--orange);
-      color: #fff;
-      font-weight: 800;
-      border: none;
-      padding: 12px;
-      border-radius: 999px;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
+.contact-form form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
 
-    button:hover {
-      background: var(--maroon);
-    }
+.contact-form input,
+.contact-form select,
+.contact-form textarea {
+  padding: 12px 15px;
+  border-radius: 8px;
+  border: 2px solid #e2d9c9;
+  font-size: 1rem;
+  font-family: 'Lato', sans-serif;
+  background: #fffaf4;
+  transition: all 0.3s ease;
+}
+
+.contact-form input:focus,
+.contact-form select:focus,
+.contact-form textarea:focus {
+  border-color: var(--orange);
+  outline: none;
+  box-shadow: 0 0 6px rgba(242,112,29,0.3);
+}
+
+.contact-form button {
+  background: linear-gradient(90deg, var(--maroon), var(--orange));
+  color: #fff;
+  font-weight: 700;
+  border: none;
+  border-radius: 50px;
+  padding: 14px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.contact-form button:hover {
+  background: #fff;
+  color: var(--maroon);
+  border: 2px solid var(--orange);
+}
+
+.contact-info p {
+  font-size: 1rem;
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.contact-info a {
+  color: var(--orange);
+  text-decoration: none;
+}
+
+.contact-info a:hover {
+  text-decoration: underline;
+}
+
+.contact-info iframe {
+  width: 100%;
+  height: 250px;
+  border: none;
+  border-radius: 12px;
+  margin-top: 15px;
+}
+
+/* Responsive Layout */
+@media (max-width: 900px) {
+  .contact-container {
+    flex-direction: column;
+  }
+  .contact-form, .contact-info {
+    flex: 1 1 100%;
+  }
+}
 
     /* INFO SECTION */
     .contact-info {
@@ -382,10 +445,14 @@ nav .btn:hover {
 </section>
 
   <!-- CONTACT SECTION -->
-  <section class="contact-section">
+<section class="contact-section" id="contact">
+  <div class="contact-container">
+    <!-- Contact Form -->
     <div class="contact-form">
       <h2>Send Us a Message</h2>
-      <form action="#" method="POST">
+      <p>We’d love to hear from you — fill out the form below and we’ll get back to you soon.</p>
+
+      <form action="https://formspree.io/f/xyznbdka" method="POST">
         <input type="text" name="name" placeholder="Full Name" required>
         <input type="email" name="email" placeholder="Email Address" required>
 
@@ -403,6 +470,7 @@ nav .btn:hover {
       </form>
     </div>
 
+    <!-- Contact Info -->
     <div class="contact-info">
       <h2>Get in Touch</h2>
       <p><strong>Email:</strong> <a href="mailto:inquire@phoenixofresilience.org">inquire@phoenixofresilience.org</a></p>
@@ -410,7 +478,8 @@ nav .btn:hover {
       <p><strong>Address:</strong><br>Atlanta, Georgia</p>
       <iframe src="https://www.google.com/maps?q=Atlanta,+GA&output=embed" loading="lazy"></iframe>
     </div>
-  </section>
+  </div>
+</section>
 
   <!-- FOOTER -->
 <footer>
@@ -465,5 +534,28 @@ nav .btn:hover {
   </div>
    </div>
 </footer>
+<script>
+  const form = document.getElementById('contactForm');
+  form.addEventListener('submit', event => {
+    event.preventDefault();
+    const formData = new FormData(form);
+    fetch(form.action, {
+      method: form.method,
+      body: formData,
+      headers: {
+        'Accept': 'application/json'
+      }
+    }).then(response => {
+      if (response.ok) {
+        form.reset();
+        alert('✅ Thank you! Your message has been sent.');
+      } else {
+        alert('Oops! There was a problem submitting your form.');
+      }
+    }).catch(error => {
+      alert('Oops! There was a problem submitting your form.');
+    });
+  });
+</script>
 </body>
 </html>
