--- a/phoenixofresilience_website/index.html
+++ b/phoenixofresilience_website/index.html
@@ -532,7 +532,62 @@
       header .brand img { width: 60px; height: 60px; }
       header .brand { font-size: 1.4rem; }
     }
-  </style>
+   
+    /* Newsletter in Footer */
+.newsletter-footer {
+  text-align: center;
+  background: transparent; /* blend into maroon footer */
+  padding: 0;
+  color: #fff;
+}
+
+.newsletter-footer h4 {
+  font-family: 'Playfair Display', serif;
+  font-size: 1.4rem;
+  color: #FFD580;
+  margin-bottom: 8px;
+}
+
+.newsletter-footer p {
+  color: #f8f1e9;
+  font-size: 0.95rem;
+  margin-bottom: 14px;
+}
+
+.newsletter-form {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+  flex-wrap: wrap;
+}
+
+.newsletter-form input[type="email"] {
+  padding: 10px 14px;
+  border: none;
+  border-radius: 999px;
+  width: 100%;
+  max-width: 220px;
+  font-family: 'Lato', sans-serif;
+  font-size: 0.95rem;
+}
+
+.newsletter-form button {
+  background: var(--orange);
+  color: #fff;
+  border: none;
+  border-radius: 999px;
+  font-weight: 700;
+  padding: 10px 20px;
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+
+.newsletter-form button:hover {
+  background: #ffb87d;
+  color: var(--maroon);
+  box-shadow: 0 0 8px rgba(255, 213, 128, 0.4);
+}
+</style>
 </head>
 
 <body>
@@ -693,18 +748,27 @@
       </div>
     </div>
     <div>
-      <h4>Stay Connected</h4>
-      <p>Subscribe to our newsletter for updates on programs and success stories.</p>
-      <form>
-        <input type="email" placeholder="Enter your email" style="padding:10px;border-radius:8px;border:none;width:100%;max-width:220px;">
-        <button type="submit" style="margin-top:10px;background:var(--orange);color:#fff;padding:8px 16px;border:none;border-radius:999px;font-weight:800;">Subscribe</button>
-      </form>
-    </div>
+<!-- Newsletter Signup (Footer Integrated) -->
+<div class="newsletter-footer">
+  <h4>Join Our Newsletter</h4>
+  <p>Stay updated on our programs, housing, and empowerment stories.</p>
+   <form 
+    action="https://app.convertkit.com/forms/8663796/subscriptions" 
+    method="post" 
+    class="newsletter-form"
+    target="_blank"
+  >
+  <input type="email" name="email_address" placeholder="Enter your email" required>
+    <button type="submit">Subscribe</button>
+  </form>
+</div>
+</div>
   </div>
   <div class="footer-bottom">
     © 2025 Phoenix of Resilience Foundation Inc. · Registered Charity · All Rights Reserved
   </div>
 </footer>
+<script src="https://f.convertkit.com/ckjs/ck.5.js"></script>
 
 </body>
 </html>
