--- a/phoenixofresilience_website/contact.html
+++ b/phoenixofresilience_website/contact.html
@@ -491,8 +491,8 @@ nav .btn:hover {
       </div>
       <div>
         <h4>Quick Links</h4>
-        <a href="index.html">Home</a>
-        <a href="about.html">About Us</a><br>
+        <a href="index.html">Home</a><br>
+        <a href="about.html">About</a><br>
         <a href="programs.html">Programs</a><br>
         <a href="get-involved.html">Get Involved</a><br>
         <a href="apply.html">Apply</a><br>
