--- a/contact.html
+++ b/contact.html
@@ -367,55 +367,150 @@ nav .btn:hover {
 
     /* FOOTER */
     footer {
-      background: var(--maroon);
-      color: #fff;
-      padding: 50px 20px;
-      border-top: 4px solid var(--orange);
-    }
-    footer .wrap {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-      gap: 30px;
-      max-width: 1100px;
-      margin: 0 auto;
-    }
-    footer h4 {
-      margin-bottom: 10px;
-      font-family: 'Playfair Display', serif;
-      color: #F8F1E9;
-    }
-    footer a {
-      color: #FFD580;
-      text-decoration: none;
-    }
-    footer a:hover {
-      text-decoration: underline;
-    }
-    .social {
-      display: flex;
-      gap: 10px;
-      margin-top: 12px;
-    }
-    .social img {
-      width: 28px;
-      height: 28px;
-      filter: brightness(0) invert(1);
-      transition: 0.3s;
-    }
-    .social img:hover {
-      filter: brightness(1) saturate(2);
-    }
-    .footer-bottom {
+  background: var(--maroon);
+  color: #fff; /* Ensures all text defaults to white */
+  padding: 50px 20px;
+  border-top: 4px solid var(--orange);
+}
+
+footer .wrap {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  gap: 30px;
+  max-width: 1100px;
+  margin: 0 auto;
+}
+
+footer h4 {
+  margin-bottom: 10px;
+  font-family: 'Playfair Display', serif;
+  color: #fff; /* White headings */
+}
+
+footer p,
+footer li,
+footer span {
+  color: #fff; /* Ensures all normal text is white */
+}
+
+footer a {
+  color: #fff; /* White links */
+  text-decoration: none;
+  transition: 0.3s;
+}
+
+footer a:hover {
+  text-decoration: underline;
+  color: #FFD700; /* Optional: gold hover effect */
+}
+
+.social {
+  display: flex;
+  gap: 10px;
+  margin-top: 12px;
+}
+
+.social img {
+  width: 28px;
+  height: 28px;
+  filter: brightness(0) invert(1);
+  transition: 0.3s;
+}
+
+.social img:hover {
+  filter: brightness(1) saturate(2);
+}
+
+.footer-bottom {
   text-align: center;
   margin-top: 40px;
   font-size: 0.9rem;
-  color: #f8f1e9;
-  border-top: 1px solid rgba(255, 255, 255, 0.2);
+  color: #fff; /* White bottom text */
+  border-top: 1px solid rgba(255,255,255,0.3);
   padding-top: 20px;
 }
-    @media (max-width:600px) {
-      .footer-grid {grid-template-columns:1fr;}
-    }
+
+@media (max-width: 960px) {
+  header {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 16px 30px;
+  }
+  nav { flex-wrap: wrap; gap: 16px; margin-top: 10px; }
+  header .brand img { width: 60px; height: 60px; }
+  header .brand { font-size: 1.4rem; }
+}
+/* ===== MOBILE MENU STYLES (Phoenix Colors) ===== */
+.menu-toggle {
+  display: none;
+  font-size: 1.9rem;
+  font-weight: 900;
+  cursor: pointer;
+  color: #fff;
+  background: linear-gradient(90deg, var(--maroon), var(--orange));
+  border: 2px solid var(--orange);
+  border-radius: 8px;
+  padding: 6px 14px;
+  transition: all 0.3s ease;
+}
+
+.menu-toggle:hover {
+  background: var(--orange);
+  color: #fff;
+  transform: scale(1.05);
+}
+
+@media (max-width: 960px) {
+  .menu-toggle {
+    display: block;
+    position: absolute;
+    top: 24px;
+    right: 30px;
+    z-index: 1000;
+  }
+
+  nav {
+    display: none;
+    flex-direction: column;
+    align-items: flex-start;
+    background: #fff;
+    width: 100%;
+    padding: 20px 30px;
+    border-top: 3px solid var(--orange);
+    box-shadow: 0 6px 16px rgba(0,0,0,0.1);
+    position: absolute;
+    top: 80px;
+    left: 0;
+    z-index: 999;
+  }
+
+  nav.active {
+    display: flex;
+    animation: slideDown 0.35s ease forwards;
+  }
+
+  @keyframes slideDown {
+    from {opacity: 0; transform: translateY(-15px);}
+    to {opacity: 1; transform: translateY(0);}
+  }
+
+  nav a {
+    padding: 10px 0;
+    width: 100%;
+    border-bottom: 1px solid rgba(128,0,0,0.1);
+  }
+
+  nav a:last-child {
+    border-bottom: none;
+  }
+
+  nav .btn {
+    align-self: center;
+    margin-top: 12px;
+  }
+}
+
+
   </style>
 </head>
 <body>
@@ -425,16 +520,21 @@ nav .btn:hover {
     <img src="assets/img/logo.png" alt="Phoenix Logo">
     <span>Phoenix of Resilience</span>
   </a>
-  <nav>
-    <a href="index.html">Home</a><br>
-    <a href="about.html">About</a><br>
-    <a href="programs.html" >Programs</a>
+
+  <!-- Mobile Menu Toggle -->
+  <div class="menu-toggle" id="menuToggle">☰</div>
+
+  <nav id="navMenu">
+    <a href="index.html" aria-current="page">Home</a>
+    <a href="about.html">About</a>
+    <a href="programs.html">Programs</a>
     <a href="get-involved.html">Get Involved</a>
     <a href="apply.html">Apply</a>
-    <a href="contact.html" aria-current="page">Contact</a>
+    <a href="contact.html">Contact</a>
     <a href="donate.html" class="btn">Donate</a>
   </nav>
 </header>
+
 
   <!-- HERO -->
 <section class="hero-contact">
@@ -452,23 +552,31 @@ nav .btn:hover {
       <h2>Send Us a Message</h2>
       <p>We’d love to hear from you — fill out the form below and we’ll get back to you soon.</p>
 
-      <form action="https://formspree.io/f/xyznbdka" method="POST">
-        <input type="text" name="name" placeholder="Full Name" required>
-        <input type="email" name="email" placeholder="Email Address" required>
+      <form name="phoenix-contact" method="POST" data-netlify="true" class="contact-form">
+  <input type="hidden" name="form-name" value="phoenix-contact" />
 
-        <select name="reason" required>
-          <option value="">Select a Reason for Contact</option>
-          <option value="volunteer">Volunteer Opportunities</option>
-          <option value="partner">Partnership or Collaboration</option>
-          <option value="sponsor">Sponsorship Inquiry</option>
-          <option value="media">Media or Speaking Request</option>
-          <option value="general">General Question</option>
-        </select>
+  <input type="text" name="name" placeholder="Full Name" required />
+  <input type="email" name="email" placeholder="Email Address" required />
 
-        <textarea name="message" rows="6" placeholder="Your Message..." required></textarea>
-        <button type="submit">Send Message</button>
-      </form>
-    </div>
+  <select name="reason" required>
+    <option value="">Select a Reason for Contact</option>
+    <option value="volunteer">Volunteer Opportunities</option>
+    <option value="partner">Partnership or Collaboration</option>
+    <option value="donate">Donation Inquiry</option>
+    <option value="media">Media or Speaking Request</option>
+    <option value="general">General Question</option>
+  </select>
+
+  <textarea name="message" rows="6" placeholder="Your Message..." required></textarea>
+
+  <button type="submit" class="btn-gold">Send Message</button>
+
+  <!-- Success Message -->
+  <p id="form-success" style="display:none; color:#800000; font-weight:600; margin-top:1rem;">
+    ✅ Thank you for contacting us! We’ll respond soon.
+  </p>
+</form>
+
 
     <!-- Contact Info -->
     <div class="contact-info">
@@ -535,27 +643,37 @@ nav .btn:hover {
    </div>
 </footer>
 <script>
-  const form = document.getElementById('contactForm');
-  form.addEventListener('submit', event => {
-    event.preventDefault();
+const form = document.querySelector('form[name="phoenix-contact"]');
+const successMsg = document.getElementById('form-success');
+
+if (form) {
+  form.addEventListener('submit', async (e) => {
+    e.preventDefault();
     const formData = new FormData(form);
-    fetch(form.action, {
-      method: form.method,
-      body: formData,
-      headers: {
-        'Accept': 'application/json'
-      }
-    }).then(response => {
-      if (response.ok) {
-        form.reset();
-        alert('✅ Thank you! Your message has been sent.');
-      } else {
-        alert('Oops! There was a problem submitting your form.');
-      }
-    }).catch(error => {
-      alert('Oops! There was a problem submitting your form.');
-    });
+
+    try {
+      await fetch('/', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
+        body: new URLSearchParams(formData).toString()
+      });
+      form.reset();
+      if (successMsg) successMsg.style.display = 'block';
+    } catch (error) {
+      alert('There was an issue submitting your form. Please try again.');
+    }
+  });
+}
+</script>
+<script>
+  const menuToggle = document.getElementById('menuToggle');
+  const navMenu = document.getElementById('navMenu');
+
+  menuToggle.addEventListener('click', () => {
+    navMenu.classList.toggle('active');
+    menuToggle.textContent = navMenu.classList.contains('active') ? '✕' : '☰';
   });
 </script>
+
 </body>
 </html>
