--- a/get-involved.html
+++ b/get-involved.html
@@ -496,55 +496,150 @@ nav .btn:hover {
 
     /* FOOTER */
     footer {
-      background: var(--maroon);
-      color: #fff;
-      padding: 50px 20px;
-      border-top: 4px solid var(--orange);
-    }
-    footer .wrap {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-      gap: 30px;
-      max-width: 1100px;
-      margin: 0 auto;
-    }
-    footer h4 {
-      margin-bottom: 10px;
-      font-family: 'Playfair Display', serif;
-      color: #F8F1E9;
-    }
-    footer a {
-      color: #FFD580;
-      text-decoration: none;
-    }
-    footer a:hover {
-      text-decoration: underline;
-    }
-    .social {
-      display: flex;
-      gap: 10px;
-      margin-top: 12px;
-    }
-    .social img {
-      width: 28px;
-      height: 28px;
-      filter: brightness(0) invert(1);
-      transition: 0.3s;
-    }
-    .social img:hover {
-      filter: brightness(1) saturate(2);
-    }
-    .footer-bottom {
+  background: var(--maroon);
+  color: #fff; /* Ensures all text defaults to white */
+  padding: 50px 20px;
+  border-top: 4px solid var(--orange);
+}
+
+footer .wrap {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  gap: 30px;
+  max-width: 1100px;
+  margin: 0 auto;
+}
+
+footer h4 {
+  margin-bottom: 10px;
+  font-family: 'Playfair Display', serif;
+  color: #fff; /* White headings */
+}
+
+footer p,
+footer li,
+footer span {
+  color: #fff; /* Ensures all normal text is white */
+}
+
+footer a {
+  color: #fff; /* White links */
+  text-decoration: none;
+  transition: 0.3s;
+}
+
+footer a:hover {
+  text-decoration: underline;
+  color: #FFD700; /* Optional: gold hover effect */
+}
+
+.social {
+  display: flex;
+  gap: 10px;
+  margin-top: 12px;
+}
+
+.social img {
+  width: 28px;
+  height: 28px;
+  filter: brightness(0) invert(1);
+  transition: 0.3s;
+}
+
+.social img:hover {
+  filter: brightness(1) saturate(2);
+}
+
+.footer-bottom {
   text-align: center;
   margin-top: 40px;
   font-size: 0.9rem;
-  color: #f8f1e9;
-  border-top: 1px solid rgba(255, 255, 255, 0.2);
+  color: #fff; /* White bottom text */
+  border-top: 1px solid rgba(255,255,255,0.3);
   padding-top: 20px;
 }
-    @media (max-width:600px) {
-      .footer-grid {grid-template-columns:1fr;}
-    }
+
+@media (max-width: 960px) {
+  header {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 16px 30px;
+  }
+  nav { flex-wrap: wrap; gap: 16px; margin-top: 10px; }
+  header .brand img { width: 60px; height: 60px; }
+  header .brand { font-size: 1.4rem; }
+}
+/* ===== MOBILE MENU STYLES (Phoenix Colors) ===== */
+.menu-toggle {
+  display: none;
+  font-size: 1.9rem;
+  font-weight: 900;
+  cursor: pointer;
+  color: #fff;
+  background: linear-gradient(90deg, var(--maroon), var(--orange));
+  border: 2px solid var(--orange);
+  border-radius: 8px;
+  padding: 6px 14px;
+  transition: all 0.3s ease;
+}
+
+.menu-toggle:hover {
+  background: var(--orange);
+  color: #fff;
+  transform: scale(1.05);
+}
+
+@media (max-width: 960px) {
+  .menu-toggle {
+    display: block;
+    position: absolute;
+    top: 24px;
+    right: 30px;
+    z-index: 1000;
+  }
+
+  nav {
+    display: none;
+    flex-direction: column;
+    align-items: flex-start;
+    background: #fff;
+    width: 100%;
+    padding: 20px 30px;
+    border-top: 3px solid var(--orange);
+    box-shadow: 0 6px 16px rgba(0,0,0,0.1);
+    position: absolute;
+    top: 80px;
+    left: 0;
+    z-index: 999;
+  }
+
+  nav.active {
+    display: flex;
+    animation: slideDown 0.35s ease forwards;
+  }
+
+  @keyframes slideDown {
+    from {opacity: 0; transform: translateY(-15px);}
+    to {opacity: 1; transform: translateY(0);}
+  }
+
+  nav a {
+    padding: 10px 0;
+    width: 100%;
+    border-bottom: 1px solid rgba(128,0,0,0.1);
+  }
+
+  nav a:last-child {
+    border-bottom: none;
+  }
+
+  nav .btn {
+    align-self: center;
+    margin-top: 12px;
+  }
+}
+
+
   </style>
 </head>
 <body>
@@ -554,16 +649,21 @@ nav .btn:hover {
     <img src="assets/img/logo.png" alt="Phoenix Logo">
     <span>Phoenix of Resilience</span>
   </a>
-  <nav>
-    <a href="index.html">Home</a>
+
+  <!-- Mobile Menu Toggle -->
+  <div class="menu-toggle" id="menuToggle">☰</div>
+
+  <nav id="navMenu">
+    <a href="index.html" aria-current="page">Home</a>
     <a href="about.html">About</a>
     <a href="programs.html">Programs</a>
-    <a href="get-involved.html" aria-current="page">Get Involved</a>
+    <a href="get-involved.html">Get Involved</a>
     <a href="apply.html">Apply</a>
     <a href="contact.html">Contact</a>
     <a href="donate.html" class="btn">Donate</a>
   </nav>
 </header>
+
   
   <!-- HERO -->
   <section class="hero">
@@ -698,27 +798,27 @@ nav .btn:hover {
 
   <!-- IMPACT COUNTERS -->
   <div class="impact">
-    <h3>Every Action Creates Change</h3>
-    <div class="impact-grid">
-      <div class="impact-card">
-        <span class="num" data-target="150">0</span>
-        <p>Women Housed Safely</p>
-      </div>
-      <div class="impact-card">
-        <span class="num" data-target="90">0</span>
-        <p>Graduated to Employment</p>
-      </div>
-      <div class="impact-card">
-        <span class="num" data-target="50">0</span>
-        <p>Active Mentors</p>
-      </div>
-      <div class="impact-card">
-        <span class="num" data-target="100">0</span>
-        <p>Lives Transformed</p>
-      </div>
+  <h3>Every Action Creates Change</h3>
+  <div class="impact-grid">
+    <div class="impact-card">
+      <span class="num">150</span>
+      <p>Women Housed Safely</p>
+    </div>
+    <div class="impact-card">
+      <span class="num">90</span>
+      <p>Graduated to Employment</p>
+    </div>
+    <div class="impact-card">
+      <span class="num">50</span>
+      <p>Active Mentors</p>
+    </div>
+    <div class="impact-card">
+      <span class="num">100</span>
+      <p>Lives Transformed</p>
     </div>
   </div>
-</section>
+</div>
+
 
   
 
@@ -806,42 +906,15 @@ nav .btn:hover {
 
   document.querySelectorAll('.circle').forEach(c => observer.observe(c));
 </script> 
-
 <script>
-  const counters = document.querySelectorAll('.impact-card .num');
-  const speed = 200; // The lower the slower
+  const menuToggle = document.getElementById('menuToggle');
+  const navMenu = document.getElementById('navMenu');
 
-  const animateCounters = () => {
-    counters.forEach(counter => {
-      const updateCount = () => {
-        const target = +counter.getAttribute('data-target');
-        const count = +counter.innerText;
-
-        const increment = Math.ceil(target / speed);
-
-        if (count < target) {
-          counter.innerText = count + increment;
-          setTimeout(updateCount, 20);
-        } else {
-          counter.innerText = target;
-        }
-      };
-      updateCount();
-    });
-  };
-
-  const counterObserver = new IntersectionObserver(entries => {
-    entries.forEach(entry => {
-      if (entry.isIntersecting) {
-        animateCounters();
-        counterObserver.unobserve(entry.target);
-      }
-    });
-  }, { threshold: 0.5 });
-
-  if (counters.length > 0) {
-    counterObserver.observe(counters[0].parentElement.parentElement);
-  }
+  menuToggle.addEventListener('click', () => {
+    navMenu.classList.toggle('active');
+    menuToggle.textContent = navMenu.classList.contains('active') ? '✕' : '☰';
+  });
 </script>
+
 </body>
 </html>
