--- a/index.html
+++ b/index.html
@@ -471,67 +471,80 @@
 
     /* ===== FOOTER ===== */
     footer {
-      background: var(--maroon);
-      color: #fff;
-      padding: 50px 20px;
-      border-top: 4px solid var(--orange);
-    }
+  background: var(--maroon);
+  color: #fff; /* Ensures all text defaults to white */
+  padding: 50px 20px;
+  border-top: 4px solid var(--orange);
+}
 
-    footer .wrap {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-      gap: 30px;
-      max-width: 1100px;
-      margin: 0 auto;
-    }
+footer .wrap {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  gap: 30px;
+  max-width: 1100px;
+  margin: 0 auto;
+}
 
-    footer h4 {
-      margin-bottom: 10px;
-      font-family: 'Playfair Display', serif;
-      color: #F8F1E9;
-    }
+footer h4 {
+  margin-bottom: 10px;
+  font-family: 'Playfair Display', serif;
+  color: #fff; /* White headings */
+}
 
-    footer a {
-      color: #FFD580;
-      text-decoration: none;
-    }
+footer p,
+footer li,
+footer span {
+  color: #fff; /* Ensures all normal text is white */
+}
 
-    footer a:hover { text-decoration: underline; }
+footer a {
+  color: #fff; /* White links */
+  text-decoration: none;
+  transition: 0.3s;
+}
 
-    .social {
-      display: flex;
-      gap: 10px;
-      margin-top: 12px;
-    }
+footer a:hover {
+  text-decoration: underline;
+  color: #FFD700; /* Optional: gold hover effect */
+}
 
-    .social img {
-      width: 28px;
-      height: 28px;
-      filter: brightness(0) invert(1);
-      transition: 0.3s;
-    }
+.social {
+  display: flex;
+  gap: 10px;
+  margin-top: 12px;
+}
 
-    .social img:hover { filter: brightness(1) saturate(2); }
+.social img {
+  width: 28px;
+  height: 28px;
+  filter: brightness(0) invert(1);
+  transition: 0.3s;
+}
 
-    .footer-bottom {
-      text-align: center;
-      margin-top: 40px;
-      font-size: 0.9rem;
-      color: #f8f1e9;
-      border-top: 1px solid rgba(255,255,255,0.2);
-      padding-top: 20px;
-    }
+.social img:hover {
+  filter: brightness(1) saturate(2);
+}
 
-    @media (max-width: 960px) {
-      header {
-        flex-direction: column;
-        align-items: flex-start;
-        padding: 16px 30px;
-      }
-      nav { flex-wrap: wrap; gap: 16px; margin-top: 10px; }
-      header .brand img { width: 60px; height: 60px; }
-      header .brand { font-size: 1.4rem; }
-    }
+.footer-bottom {
+  text-align: center;
+  margin-top: 40px;
+  font-size: 0.9rem;
+  color: #fff; /* White bottom text */
+  border-top: 1px solid rgba(255,255,255,0.3);
+  padding-top: 20px;
+}
+
+@media (max-width: 960px) {
+  header {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 16px 30px;
+  }
+  nav { flex-wrap: wrap; gap: 16px; margin-top: 10px; }
+  header .brand img { width: 60px; height: 60px; }
+  header .brand { font-size: 1.4rem; }
+}
+
    
     /* Newsletter in Footer */
 .newsletter-footer {
@@ -587,6 +600,76 @@
   color: var(--maroon);
   box-shadow: 0 0 8px rgba(255, 213, 128, 0.4);
 }
+/* ===== MOBILE MENU STYLES (Phoenix Colors) ===== */
+.menu-toggle {
+  display: none;
+  font-size: 1.9rem;
+  font-weight: 900;
+  cursor: pointer;
+  color: #fff;
+  background: linear-gradient(90deg, var(--maroon), var(--orange));
+  border: 2px solid var(--orange);
+  border-radius: 8px;
+  padding: 6px 14px;
+  transition: all 0.3s ease;
+}
+
+.menu-toggle:hover {
+  background: var(--orange);
+  color: #fff;
+  transform: scale(1.05);
+}
+
+@media (max-width: 960px) {
+  .menu-toggle {
+    display: block;
+    position: absolute;
+    top: 24px;
+    right: 30px;
+    z-index: 1000;
+  }
+
+  nav {
+    display: none;
+    flex-direction: column;
+    align-items: flex-start;
+    background: #fff;
+    width: 100%;
+    padding: 20px 30px;
+    border-top: 3px solid var(--orange);
+    box-shadow: 0 6px 16px rgba(0,0,0,0.1);
+    position: absolute;
+    top: 80px;
+    left: 0;
+    z-index: 999;
+  }
+
+  nav.active {
+    display: flex;
+    animation: slideDown 0.35s ease forwards;
+  }
+
+  @keyframes slideDown {
+    from {opacity: 0; transform: translateY(-15px);}
+    to {opacity: 1; transform: translateY(0);}
+  }
+
+  nav a {
+    padding: 10px 0;
+    width: 100%;
+    border-bottom: 1px solid rgba(128,0,0,0.1);
+  }
+
+  nav a:last-child {
+    border-bottom: none;
+  }
+
+  nav .btn {
+    align-self: center;
+    margin-top: 12px;
+  }
+}
+
 </style>
 </head>
 
@@ -597,7 +680,11 @@
     <img src="assets/img/logo.png" alt="Phoenix Logo">
     <span>Phoenix of Resilience</span>
   </a>
-  <nav>
+
+  <!-- Mobile Menu Toggle -->
+  <div class="menu-toggle" id="menuToggle">☰</div>
+
+  <nav id="navMenu">
     <a href="index.html" aria-current="page">Home</a>
     <a href="about.html">About</a>
     <a href="programs.html">Programs</a>
@@ -607,6 +694,8 @@
     <a href="donate.html" class="btn">Donate</a>
   </nav>
 </header>
+
+
 
 <section class="hero">
   <div class="hero-content">
@@ -952,6 +1041,14 @@ window.addEventListener('click', (e) => {
   </div>
 </footer>
 <script src="https://f.convertkit.com/ckjs/ck.5.js"></script>
+<script>
+  const menuToggle = document.getElementById('menuToggle');
+  const navMenu = document.getElementById('navMenu');
 
+  menuToggle.addEventListener('click', () => {
+    navMenu.classList.toggle('active');
+    menuToggle.textContent = navMenu.classList.contains('active') ? '✕' : '☰';
+  });
+</script>
 </body>
 </html>
