--- a/phoenixofresilience_website/donate.html
+++ b/phoenixofresilience_website/donate.html
@@ -383,25 +383,101 @@ nav .btn:hover {
     @media (max-width:600px) {
       .footer-grid {grid-template-columns:1fr;}
     }
+    /* ===== MOBILE MENU STYLES (Phoenix Colors) ===== */
+.menu-toggle {
+  display: none;
+  font-size: 1.9rem;
+  font-weight: 900;
+  cursor: pointer;
+  color: #fff;
+  background: linear-gradient(90deg, var(--maroon), var(--orange));
+  border: 2px solid var(--orange);
+  border-radius: 8px;
+  padding: 6px 14px;
+  transition: all 0.3s ease;
+}
+
+.menu-toggle:hover {
+  background: var(--orange);
+  color: #fff;
+  transform: scale(1.05);
+}
+
+@media (max-width: 960px) {
+  .menu-toggle {
+    display: block;
+    position: absolute;
+    top: 24px;
+    right: 30px;
+    z-index: 1000;
+  }
+
+  nav {
+    display: none;
+    flex-direction: column;
+    align-items: flex-start;
+    background: #fff;
+    width: 100%;
+    padding: 20px 30px;
+    border-top: 3px solid var(--orange);
+    box-shadow: 0 6px 16px rgba(0,0,0,0.1);
+    position: absolute;
+    top: 80px;
+    left: 0;
+    z-index: 999;
+  }
+
+  nav.active {
+    display: flex;
+    animation: slideDown 0.35s ease forwards;
+  }
+
+  @keyframes slideDown {
+    from {opacity: 0; transform: translateY(-15px);}
+    to {opacity: 1; transform: translateY(0);}
+  }
+
+  nav a {
+    padding: 10px 0;
+    width: 100%;
+    border-bottom: 1px solid rgba(128,0,0,0.1);
+  }
+
+  nav a:last-child {
+    border-bottom: none;
+  }
+
+  nav .btn {
+    align-self: center;
+    margin-top: 12px;
+  }
+}
+
   </style>
 </head>
 <body>
 
+ 
   <header>
   <a href="index.html" class="brand">
     <img src="assets/img/logo.png" alt="Phoenix Logo">
     <span>Phoenix of Resilience</span>
   </a>
-  <nav>
-    <a href="index.html">Home</a>
+
+  <!-- Mobile Menu Toggle -->
+  <div class="menu-toggle" id="menuToggle">☰</div>
+
+  <nav id="navMenu">
+    <a href="index.html" aria-current="page">Home</a>
     <a href="about.html">About</a>
-    <a href="programs.html" >Programs</a>
+    <a href="programs.html">Programs</a>
     <a href="get-involved.html">Get Involved</a>
     <a href="apply.html">Apply</a>
     <a href="contact.html">Contact</a>
     <a href="donate.html" class="btn">Donate</a>
   </nav>
 </header>
+
 
   <!-- HERO -->
   <section class="hero">
@@ -747,5 +823,15 @@ nav .btn:hover {
     });
   });
 </script>
+<script>
+  const menuToggle = document.getElementById('menuToggle');
+  const navMenu = document.getElementById('navMenu');
+
+  menuToggle.addEventListener('click', () => {
+    navMenu.classList.toggle('active');
+    menuToggle.textContent = navMenu.classList.contains('active') ? '✕' : '☰';
+  });
+</script>
+
 </body>
 </html>
