--- a/phoenixofresilience_website/donation-receipt.html
+++ b/phoenixofresilience_website/donation-receipt.html
@@ -34,6 +34,76 @@
     transition:0.3s;
   }
   button:hover { background:#F2701D; }
+  /* ===== MOBILE MENU STYLES (Phoenix Colors) ===== */
+.menu-toggle {
+  display: none;
+  font-size: 1.9rem;
+  font-weight: 900;
+  cursor: pointer;
+  color: #fff;
+  background: linear-gradient(90deg, var(--maroon), var(--orange));
+  border: 2px solid var(--orange);
+  border-radius: 8px;
+  padding: 6px 14px;
+  transition: all 0.3s ease;
+}
+
+.menu-toggle:hover {
+  background: var(--orange);
+  color: #fff;
+  transform: scale(1.05);
+}
+
+@media (max-width: 960px) {
+  .menu-toggle {
+    display: block;
+    position: absolute;
+    top: 24px;
+    right: 30px;
+    z-index: 1000;
+  }
+
+  nav {
+    display: none;
+    flex-direction: column;
+    align-items: flex-start;
+    background: #fff;
+    width: 100%;
+    padding: 20px 30px;
+    border-top: 3px solid var(--orange);
+    box-shadow: 0 6px 16px rgba(0,0,0,0.1);
+    position: absolute;
+    top: 80px;
+    left: 0;
+    z-index: 999;
+  }
+
+  nav.active {
+    display: flex;
+    animation: slideDown 0.35s ease forwards;
+  }
+
+  @keyframes slideDown {
+    from {opacity: 0; transform: translateY(-15px);}
+    to {opacity: 1; transform: translateY(0);}
+  }
+
+  nav a {
+    padding: 10px 0;
+    width: 100%;
+    border-bottom: 1px solid rgba(128,0,0,0.1);
+  }
+
+  nav a:last-child {
+    border-bottom: none;
+  }
+
+  nav .btn {
+    align-self: center;
+    margin-top: 12px;
+  }
+}
+
 </style>
 </head>
 <body>
@@ -55,5 +125,16 @@
     </footer>
     <button onclick="window.print()">Download / Print Receipt</button>
   </div>
+  <script>
+  const menuToggle = document.getElementById('menuToggle');
+  const navMenu = document.getElementById('navMenu');
+
+  menuToggle.addEventListener('click', () => {
+    navMenu.classList.toggle('active');
+    menuToggle.textContent = navMenu.classList.contains('active') ? '✕' : '☰';
+  });
+  
+</script>
+
 </body>
 </html>
