--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
       text-align: center;
       color: #fff;
       background:
-        linear-gradient(120deg, rgba(128,0,0,0.7), rgba(242,112,29,0.7)),
-        url('assets/img/women.png') center/cover no-repeat;
+      linear-gradient(120deg, rgba(128, 0, 0, 0.75), rgba(242, 112, 29, 0.65)),
+      url('assets/img/women.png') center/cover no-repeat;
       padding: 0 20px;
     }
 
@@ -160,6 +160,92 @@
       background: #fff;
       color: var(--maroon);
     }
+/* ===== RESPONSIVE HERO IMAGE FIX ===== */
+.hero {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: scroll;
+  transition: background-position 0.5s ease-out;
+}
+
+/* TABLETS — make sure image is slightly higher for composition */
+@media (max-width: 1024px) {
+  .hero {
+    background-position: center top;
+    background-size: cover;
+  }
+}
+
+/* LARGE PHONES */
+@media (max-width: 768px) {
+  .hero {
+    background-position: 50% 20%; /* shows faces/center of image */
+    background-size: cover;
+    padding: 120px 20px 90px;
+  }
+}
+
+/* SMALL PHONES — ensures full image stays visible */
+@media (max-width: 480px) {
+  .hero {
+    background-position: 50% 25%;
+    background-size: contain; /* avoids image cut-off */
+    background-repeat: no-repeat;
+    min-height: 100vh;
+  }
+}
+
+    /* ===== FIX HERO SECTION FOR MOBILE/TABLET ===== */
+@media (max-width: 1024px) {
+  .hero {
+    height: auto;                /* removes fixed height */
+    min-height: 100vh;           /* ensures full screen coverage */
+    background-attachment: scroll; /* prevents image cutoff */
+    background-position: center top;
+    padding: 100px 20px 80px;    /* ensures spacing around text */
+  }
+
+  .hero-content {
+    max-width: 90%;
+    margin: 0 auto;
+  }
+
+  .hero h1 {
+    font-size: 2.2rem;
+    line-height: 1.3;
+    margin-bottom: 15px;
+  }
+
+  .hero p {
+    font-size: 1.05rem;
+    margin-bottom: 25px;
+  }
+
+  .cta-row {
+    flex-direction: column;
+    gap: 12px;
+  }
+
+  .btn {
+    width: fit-content;
+    margin: 0 auto;
+  }
+}
+
+/* Optional for smaller phones */
+@media (max-width: 480px) {
+  .hero {
+    padding: 120px 15px 80px;
+  }
+  .hero h1 {
+    font-size: 1.8rem;
+  }
+  .hero p {
+    font-size: 1rem;
+  }
+}
+
 
     /* SECTION DIVIDER */
     .section-divider {
@@ -963,24 +1049,28 @@ window.addEventListener('click', (e) => {
 <section class="events">
   <h2>Upcoming Events</h2>
   <div class="event-grid">
+
     <div class="event-card">
       <h3>🏠 Community Reentry Fair</h3>
-      <p><strong>Date:</strong> November 15, 2025</p>
+      <p><strong>Date:</strong> November 15, 2026</p>
       <p>Join us as we connect women with housing, job training, and local partners.</p>
-      <a href="#" class="btn-small">Learn More</a>
+      <a href="contact.html" class="btn-small">Learn More</a>
     </div>
+
     <div class="event-card">
       <h3>🎁 Holiday Donation Drive</h3>
-      <p><strong>Date:</strong> December 10, 2025</p>
+      <p><strong>Date:</strong> December 10, 2026</p>
       <p>Help collect care packages and essentials for women in transition.</p>
-      <a href="#" class="btn-small">Get Involved</a>
+      <a href="get-involved.html" class="btn-small">Get Involved</a>
     </div>
+
     <div class="event-card">
       <h3>🌸 Volunteer Appreciation Brunch</h3>
-      <p><strong>Date:</strong> January 20, 2026</p>
+      <p><strong>Date:</strong> January 20, 2027</p>
       <p>Celebrating the heart of Phoenix — our incredible volunteers and donors.</p>
-      <a href="#" class="btn-small">RSVP</a>
+      <a href="contact.html" target="_blank" class="btn-small">RSVP</a>
     </div>
+
   </div>
 </section>
 
@@ -1042,6 +1132,10 @@ window.addEventListener('click', (e) => {
 </footer>
 <script src="https://f.convertkit.com/ckjs/ck.5.js"></script>
 <script>
+    // Footer year
+    document.getElementById('y').textContent = new Date().getFullYear();
+  </script>
+  <script>
   const menuToggle = document.getElementById('menuToggle');
   const navMenu = document.getElementById('navMenu');
 
