--- a/about.html
+++ b/about.html
@@ -538,7 +538,6 @@ footer a:hover {
     <p>Once Overlooked. Now the Example.</p>
   </section>
 
-  <hr class="section-divider">
 
   <!-- Our Mission & Our Vision -->
   <section class="mv">
@@ -556,7 +555,7 @@ footer a:hover {
     </div>
   </section>
 
-  <hr class="section-divider">
+   <hr class="section-divider">
 
   <!-- Our Story -->
   <section class="our-story">
@@ -584,7 +583,7 @@ footer a:hover {
         </article>
 
         <article class="board-card">
-          <img src="assets/img/je.jpg" alt="Jessica Mitchell">
+          <img src="assets/img/JESSICA MITCHELL.jpg" alt="Jessica Mitchell">
           <h3>Jessica Mitchell</h3>
           <p class="role">Housing Executive</p>
           <p>Coordinates safe, supportive housing with trauma-informed practices that promote healing and accountability.</p>
@@ -598,7 +597,7 @@ footer a:hover {
         </article>
 
         <article class="board-card">
-          <img src="assets/img/.jpg" alt="Lakeria Watson">
+          <img src="assets/img/lala.jpg" alt="Lakeria Watson">
           <h3>Lakeria Watson</h3>
           <p class="role">Secretary</p>
           <p>Oversees documentation and communications, keeping the organization responsive and audit-ready.</p>
@@ -607,7 +606,7 @@ footer a:hover {
     </div>
   </section>
 
-  <hr class="section-divider">
+ 
 
   <!-- Our Core Values -->
   <section class="values">
@@ -633,7 +632,6 @@ footer a:hover {
     </div>
   </section>
 
-  <hr class="section-divider">
 
   <!-- Community Partners -->
   <section class="partners">
@@ -641,15 +639,15 @@ footer a:hover {
       <h2>Community Partners</h2>
       <p>We collaborate with local agencies, reentry programs, and faith-based organizations to expand access to housing, employment, and support.</p>
       <div class="partner-logos">
-        <div class="partner-card">Georgia Justice Project</div>
-        <div class="partner-card">Fulton County Reentry Services</div>
-        <div class="partner-card">Goodwill Career Center</div>
+        <div class="partner-card">Kaizen J Consulting</div>
+        <div class="partner-card">Space Creations by Jessica</div>
+        <div class="partner-card">Papa James Home Cooking</div>
         <div class="partner-card">Local Churches & Community Groups</div>
       </div>
     </div>
   </section>
 
-  <hr class="section-divider">
+  
 
   <!-- Join the Movement -->
   <section class="join">
