--- a/get-involved.html
+++ b/get-involved.html
@@ -809,7 +809,7 @@ footer a:hover {
         <div class="content">
           <h3>Volunteer</h3>
           <p>Empower women by mentoring, teaching workshops, or supporting community events. Your time can change a life.</p>
-          <a href="apply.html" class="btn">Join Our Team</a>
+          <a href="contact.html" class="btn">Join Our Team</a>
         </div>
       </div>
 
@@ -827,7 +827,7 @@ footer a:hover {
         <div class="content">
           <h3>Sponsor</h3>
           <p>Support our events, workshops, or housing initiatives as a sponsor. Your brand becomes part of every story of resilience.</p>
-          <a href="contact.html" class="btn">Become a Sponsor</a>
+          <a href="donate.html" class="btn">Become a Sponsor</a>
         </div>
       </div>
 
