--- a/about.html
+++ b/about.html
@@ -576,28 +576,28 @@ footer a:hover {
 
       <div class="board-grid">
         <article class="board-card">
-          <img src="assets/img/Jalita Johnson .jpg" alt="Jalita Johnson">
+          <img src="assets/img/jalita22.JPG" alt="Jalita Johnson">
           <h3>Jalita Johnson</h3>
           <p class="role">Founder & Executive Director</p>
           <p>Leads the vision and operations, transforming her own story of resilience into a movement that empowers women to rebuild.</p>
         </article>
 
         <article class="board-card">
-          <img src="assets/img/JESSICA MITCHELL.jpg" alt="Jessica Mitchell">
+          <img src="assets/img/jessica 33.jpg" alt="Jessica Mitchell">
           <h3>Jessica Mitchell</h3>
           <p class="role">Housing Executive</p>
           <p>Coordinates safe, supportive housing with trauma-informed practices that promote healing and accountability.</p>
         </article>
 
         <article class="board-card">
-          <img src="assets/img/SHANAE BULLARD.jpg" alt="Shanae Bullard">
+          <img src="assets/img/shae2.JPG" alt="Shanae Bullard">
           <h3>Shanae Bullard</h3>
           <p class="role">Treasurer</p>
           <p>Ensures financial transparency and stewardship so every contribution directly supports women in need.</p>
         </article>
 
         <article class="board-card">
-          <img src="assets/img/lala.jpg" alt="Lakeria Watson">
+          <img src="assets/img/lala.JPG" alt="Lakeria Watson">
           <h3>Lakeria Watson</h3>
           <p class="role">Secretary</p>
           <p>Oversees documentation and communications, keeping the organization responsive and audit-ready.</p>
@@ -659,8 +659,8 @@ footer a:hover {
     </p>
 
     <div class="btn-row">
-      <a href="get-involved.html" class="btn">Become a Volunteer</a>
-      <a href="get-involved.html" class="btn">Partner with Us</a>
+      <a href="contact.html" class="btn">Become a Volunteer</a>
+      <a href="contact.html" class="btn">Partner with Us</a>
       <a href="donate.html" class="btn">Give Now</a>
       <a href="contact.html" class="btn">Spread the Word</a>
     </div>
