--- a/get-involved.html
+++ b/get-involved.html
@@ -731,8 +731,8 @@ footer a:hover {
 
 <section class="photo-row">
   <img src="assets/img/dreams.jpg" alt="Community Event">
-  <img src="assets/img/at the park.jpg" alt="Mentorship Session">
-  <img src="assets/img/backpic.jpg" alt="Workshop">
+  <img src="assets/img/backpic.jpg" alt="Mentorship Session">
+  <img src="assets/img/at the park.jpg" alt="Workshop">
 </section>
 
   
@@ -846,9 +846,9 @@ footer a:hover {
 <hr class="section-divider">
 
 <section class="photo-row">
-  <img src="assets/img/Peer-Support03_FINAL-2-min.jpg" alt="Community Event">
-  <img src="assets/img/group.jpg" alt="Mentorship Session">
-  <img src="assets/img/48in48.jpg" alt="Workshop">
+  <img src="assets/img/bench.JPG" alt="Community Event">
+  <img src="assets/img/48in482.jpg" alt="Mentorship Session">
+  <img src="assets/img/group.jpg" alt="Workshop">
 </section>
 
 
